Added website flow for admins

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -33,7 +33,7 @@
 <body>
 
   <!--Start of Tawk.to Script-->
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
     (function(){
     var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
@@ -43,7 +43,7 @@
     s1.setAttribute('crossorigin','*');
     s0.parentNode.insertBefore(s1,s0);
     })();
-    </script>
+    </script> -->
   <!--End of Tawk.to Script-->
 
   <main>
@@ -70,15 +70,15 @@
                     <p class="text-center small">Enter your Email & password to login</p>
                   </div>
 
-                  <!-- changes made M-->   
+                  <!-- changes made M-->
                   <form action="/Login" method="post" class="row g-3 needs-validation" novalidate >
 
                     <div class="col-12">
                       <label for="yourUsername" class="form-label">Username</label>
                       <div class="input-group has-validation">
-                        
-                        <!-- changes made M-->                  
-                        <input type="text" name="email" class="form-control" id="Email" required placeholder="Email"> 
+
+                        <!-- changes made M-->
+                        <input type="text" name="email" class="form-control" id="Email" required placeholder="Email">
                         <div class="invalid-feedback">Please enter your Email.</div>
                       </div>
                     </div>
@@ -86,11 +86,11 @@
                     <div class="col-12">
                       <label for="yourPassword" class="form-label">Password</label>
 
-                      <!-- changes made M-->   
+                      <!-- changes made M-->
                       <input  type="password" name="password" placeholder="Password" class="form-control" id="yourPassword" required >
                       <div class="invalid-feedback">Please enter your password!</div>
                     </div>
-                    
+
                     <div class="col-12">
                       <button class="btn btn-primary w-100" type="submit" value="Send">Login</button>
                     </div>
