--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -60,7 +60,7 @@
 <body>
 
   <!--Start of Tawk.to Script-->
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
     (function(){
     var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
@@ -70,9 +70,9 @@
     s1.setAttribute('crossorigin','*');
     s0.parentNode.insertBefore(s1,s0);
     })();
-    </script>
+    </script> -->
   <!--End of Tawk.to Script-->
-  
+
     <main>
         <div class="container">
 
