Change Password done

--- a/views/auth/confirmPassword.ejs
+++ b/views/auth/confirmPassword.ejs
@@ -83,14 +83,14 @@
                     <div class="col-12">
                         <label for="yourPassword" class="form-label">Enter OTP</label>
                         <div class="col-12">
-                            <input type="number" name="code" id="" placeholder="OTP" class="form-control">
+                            <input type="number" name="code" placeholder="OTP" class="form-control">
                         </div>
                     </div><br>
-                    <input type="text" name="email" value="<%=email%>" id="" hidden>
+                    <input type="text" name="email" value="<%=email%>" hidden>
                 
                     <div class="col-12">
                         <label for="yourPassword" class="form-label">Password</label>
-                        <input type="password" name="password" class="form-control" id="psw"
+                        <input type="password" name="password" class="form-control" id="passwordF"
                             pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
                             title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
                             required>
@@ -110,7 +110,7 @@
                     <div class="col-12">
                         <label for="yourPassword" class="form-label">Confirm Password</label>
                         <input type="password" name="confirmpassword" class="form-control"
-                            id="confirm_psw" required>
+                            id="cpsw" required>
                         <div class="invalid-feedback">Please confirm your password!</div>
                         <label id="conpsw" class="form-label" style="color: red;">Password not matched</label>
                     </div>
@@ -140,9 +140,8 @@
     </div>
   </main><!-- End #main -->
   <script>
-    var myInput = document.getElementById("psw");
-    var myInput2 = document.getElementById("confirm_psw");
-    var myInput3 = document.getElementById("mob");
+    var myInput = document.getElementById("passwordF");
+    var myInput2 = document.getElementById("cpsw");
 
 
     var label = document.getElementById("conpsw");
@@ -155,13 +154,10 @@
 
     // When the user clicks on the password field, show the message box
     myInput.onfocus = function () {
+        console.log("focus");
         document.getElementById("message").style.display = "block";
     }
 
-    // When the user clicks outside of the password field, hide the message box
-    myInput.onblur = function () {
-        document.getElementById("message").style.display = "none";
-    }
 
     // When the user starts to type something inside the password field
     myInput.onkeyup = function () {
@@ -214,18 +210,6 @@
             document.getElementById("submitBtn").disabled = false;
         } else {
             label.style.display = "block";
-            document.getElementById("submitBtn").disabled = true;
-        }
-    }
-
-    myInput3.onkeyup = function () {
-
-        // Validate length
-        if (myInput3.value.length == 13 && myInput3.value.charAt(0) == '+') {
-            label2.style.display = "none";
-            document.getElementById("submitBtn").disabled = false;
-        } else {
-            label2.style.display = "block";
             document.getElementById("submitBtn").disabled = true;
         }
     }
