--- a/views/user/changePassword.ejs
+++ b/views/user/changePassword.ejs
@@ -32,6 +32,29 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
 </head>
+<style>
+  /* Add a green text color and a checkmark when the requirements are right */
+  .valid {
+    color: green;
+  }
+
+  .valid:before {
+    position: relative;
+    left: 0px;
+    content: "✔";
+  }
+
+  /* Add a red text color and an "x" when the requirements are wrong */
+  .invalid {
+    color: red;
+  }
+
+  .invalid:before {
+    position: relative;
+    left: 0px;
+    content: "✖";
+  }
+</style>
 
 <body>
 
@@ -326,50 +349,50 @@
 
               <!-- General Form Elements -->
               <form class="row g-3 needs-validation" action="/ConfirmForgotPassword" method="post" novalidate>
-                  <div class="col-12">
-                      <label for="yourPassword" class="form-label">Enter OTP</label>
-                      <div class="col-12">
-                          <input type="number" name="code" id="" placeholder="OTP" class="form-control" required>
-                          <div class="invalid-feedback">Please enter OTP!</div>
-                      </div>
-                  </div><br>
-                  <input type="text" name="email" value="<%=userData.idToken.payload.email%>" id="" hidden>
-              
-                  <div class="col-12">
-                      <label for="yourPassword" class="form-label">Password</label>
-                      <input type="password" name="password" class="form-control" id="psw"
-                          pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
-                          title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
-                          required>
-                      <div class="invalid-feedback">Please enter your password!</div>
+                <div class="col-12 mt-4">
+                  <div class="col-sm-6">
+                    <a href="/SendOTP">Send/Resend OTP</a>
                   </div>
+                </div>
+                <div class="col-12">
+                  <label for="yourPassword" class="form-label">Enter OTP</label>
+                  <div class="col-12">
+                    <input type="number" name="code" id="" placeholder="OTP" class="form-control" required>
+                    <div class="invalid-feedback">Please enter OTP!</div>
+                  </div>
+                </div><br>
+                <input type="text" name="email" value="<%=userData.idToken.payload.email%>" id="" hidden>
 
-                  <div class="col-12" id="message" style="display:none">
-                      <label class="form-label">Password must contain the following:</label>
-                      <div>
-                          <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
-                          <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
-                          <p id="number" class="invalid">A <b>number</b></p>
-                          <p id="length" class="invalid">Minimum <b>8 characters</b></p>
-                      </div>
-                  </div>
+                <div class="col-12">
+                  <label for="yourPassword" class="form-label">Password</label>
+                  <input type="password" name="password" class="form-control" id="psw"
+                    pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                    title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
+                    required>
+                  <div class="invalid-feedback">Please enter your password!</div>
+                </div>
 
-                  <div class="col-12">
-                      <label for="yourPassword" class="form-label">Confirm Password</label>
-                      <input type="password" name="confirmpassword" class="form-control"
-                          id="confirm_psw" required>
-                      <div class="invalid-feedback">Please confirm your password!</div>
-                      <label id="conpsw" class="form-label" style="color: red;">Password not matched</label>
+                <div class="col-12" id="message" style="display:none">
+                  <label class="form-label">Password must contain the following:</label>
+                  <div>
+                    <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
+                    <p id="capital" class="invalid">A <b>capital (uppercase)</b> letter</p>
+                    <p id="number" class="invalid">A <b>number</b></p>
+                    <p id="length" class="invalid">Minimum <b>8 characters</b></p>
                   </div>
-                 
-                  <div class="col-12 mt-4">
-                      <div class="col-sm-6">
-                          <a href="/ForgotPassword">Resend OTP</a>
-                      </div>
-                      <div class="col-sm-6">
-                          <button disabled type="submit" id="submitBtn" class="btn btn-primary">Submit</button>
-                      </div>
+                </div>
+
+                <div class="col-12">
+                  <label for="yourPassword" class="form-label">Confirm Password</label>
+                  <input type="password" name="confirmpassword" class="form-control" id="confirm_psw" required>
+                  <div class="invalid-feedback">Please confirm your password!</div>
+                  <label id="conpsw" class="form-label" style="color: red;">Password not matched</label>
+                </div>
+                <div class="col-12 mt-4">
+                  <div class="col-sm-6">
+                    <button disabled type="submit" id="submitBtn" class="btn btn-primary">Submit</button>
                   </div>
+                </div>
               </form><!-- End General Form Elements -->
 
             </div>
@@ -388,23 +411,82 @@
 
 
     </section>
-    <script>
-      var myInput3 = document.getElementById("mob");
-      var label2 = document.getElementById("moblabel");
-      myInput3.onkeyup = function () {
 
-        // Validate length
-        if (myInput3.value.length == 13 && myInput3.value.charAt(0) == '+') {
-          label2.style.display = "none";
-          document.getElementById("submitBtn").disabled = false;
-        } else {
-          label2.style.display = "block";
-          document.getElementById("submitBtn").disabled = true;
-        }
-      }
-    </script>
   </main><!-- End #main -->
+  <script>
+    var myInput = document.getElementById("psw");
+    var myInput2 = document.getElementById("confirm_psw");
 
+
+    var label = document.getElementById("conpsw");
+
+    var letter = document.getElementById("letter");
+    var capital = document.getElementById("capital");
+    var number = document.getElementById("number");
+    var length = document.getElementById("length");
+
+    // When the user clicks on the password field, show the message box
+    myInput.onfocus = function () {
+      console.log("focus");
+      document.getElementById("message").style.display = "block";
+    }
+
+
+    // When the user starts to type something inside the password field
+    myInput.onkeyup = function () {
+      // Validate lowercase letters
+      var lowerCaseLetters = /[a-z]/g;
+      if (myInput.value.match(lowerCaseLetters)) {
+        letter.classList.remove("invalid");
+        letter.classList.add("valid");
+      } else {
+        letter.classList.remove("valid");
+        letter.classList.add("invalid");
+      }
+
+      // Validate capital letters
+      var upperCaseLetters = /[A-Z]/g;
+      if (myInput.value.match(upperCaseLetters)) {
+        capital.classList.remove("invalid");
+        capital.classList.add("valid");
+      } else {
+        capital.classList.remove("valid");
+        capital.classList.add("invalid");
+      }
+
+      // Validate numbers
+      var numbers = /[0-9]/g;
+      if (myInput.value.match(numbers)) {
+        number.classList.remove("invalid");
+        number.classList.add("valid");
+      } else {
+        number.classList.remove("valid");
+        number.classList.add("invalid");
+      }
+
+      // Validate length
+      if (myInput.value.length >= 8) {
+        length.classList.remove("invalid");
+        length.classList.add("valid");
+
+      } else {
+        length.classList.remove("valid");
+        length.classList.add("invalid");
+      }
+    }
+
+    myInput2.onkeyup = function () {
+
+      // Validate length
+      if (myInput.value == myInput2.value) {
+        label.style.display = "none";
+        document.getElementById("submitBtn").disabled = false;
+      } else {
+        label.style.display = "block";
+        document.getElementById("submitBtn").disabled = true;
+      }
+    }
+  </script>
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
     <div class="copyright">
