--- a/views/user/changePassword.ejs
+++ b/views/user/changePassword.ejs
@@ -332,6 +332,7 @@
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="/Dashboard">Dashboard</a></li>
+          <li class="breadcrumb-item"><a href="/Dashboard">My Account</a></li>
           <li class="breadcrumb-item active">
             Change Password
           </li>
