--- a/views/user/viewprofile.ejs
+++ b/views/user/viewprofile.ejs
@@ -306,6 +306,7 @@
       <nav>
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="/Dashboard">Dashboard</a></li>
+          <li class="breadcrumb-item"><a href="/Dashboard">My Account</a></li>
           <li class="breadcrumb-item active"><%=userData.payload.name%>'s Profile</li>
         </ol>
       </nav>
